--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: extra
 Maintainer: Robert James Clay <jame@rocasa.us>
 Build-Depends: debhelper (>= 5)
 Standards-Version: 3.7.2
-Vcs-Browser: http://git.rocasa.org/gitweb.cgi/bbbsdeb.git?a=shortlog;h=refs/heads/bbbs-installer
+Vcs-Browser: http://github.com/bbbsdeb/pkg-bbbs
 Homepage: http://rocasa.org/bbbsdeb 
 
 Package: bbbs-installer
